kubernetes/gitea.yml
# gitea.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.15
          ports:
            - containerPort: 3000
              hostPort: 3001
              protocol: TCP
              name: http
          ports:
            - containerPort: 22
              hostPort: 2222
              protocol: TCP
              name: ssh
          volumeMounts:
          - mountPath: /data
            name: gitea
      restartPolicy: Always
      volumes:
        - name: gitea
          persistentVolumeClaim:
            claimName: gitea
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: default
spec:
  ports:
  - name: https
    port: 3001
    protocol: TCP
    targetPort: 3000
  selector:
    app: gitea
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: default
spec:
  ports:
  - name: ssh
    port: 2222
    protocol: TCP
    targetPort: 22
  selector:
    app: gitea
  sessionAffinity: None
  type: LoadBalancer
---
