kubernetes/keycloak.yml
# keycloak.yml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: psql
  name: psql
spec:
  containers:
  - name: setup-keycloak-database
    args:
    - psql
    - postgres://postgres:$(POSTGRES_SUPERUSER_PASSWORD)@postgres-cluster
    - -c
    - |-
      CREATE DATABASE keycloak;
      CREATE USER keycloak WITH PASSWORD '$(POSTGRES_KEYCLOAK_PASSWORD)' CREATEDB;
      GRANT ALL on schema public TO keycloak;
    image: ongres/postgres-util
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: keycloak
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - args:
        - --verbose
        - start
        image: quay.io/keycloak/keycloak:23.0.4
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /realms/master
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/keycloak/conf/keycloak.conf
          name: keycloak-config-file
          readOnly: true
          subPath: keycloak.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: keycloak-config
        name: keycloak-config-file
      - name: keycloak-realm-file
        secret:
          defaultMode: 420
          secretName: keycloak-realm
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - keycloak.mksybr.com
    secretName: letsencrypt-prod
  rules:
    - host: keycloak.mksybr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
---
